[metadata]
name = CSCCoffea
description = Explores CSC data using the Coffea framework.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/williamnash/CSCCoffea
author = William Nash
author_email = wnash@ucla.edu
maintainer = William Nash
maintainer_email = wnash@ucla.edu
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://github.com/williamnash/CSCCoffea/issues
    Discussions = https://github.com/williamnash/CSCCoffea/discussions
    Changelog = https://github.com/williamnash/CSCCoffea/releases

[options]
packages = find:
install_requires =
    awkward>=1.3.0
    coffea
    dask>=0.18.0
    matplotlib>=3.3.4
    numpy
    typing
    uproot>=4.0.6
python_requires = >=3.6.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pre-commit
    pytest>=6
    pytest-cov
docs =
    Sphinx~=3.0
    myst_parser>=0.13
    sphinx-book-theme>=0.0.33
    sphinx_copybutton
test =
    pre-commit
    pytest>=6
    pytest-cov

[flake8]
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T
